# Depth_drone_gz

./: .gitignore  CMakeLists.txt  README.md  mav.parm  mav.tlog  mav.tlog.raw  package.xml
config/: bridge_config.yaml
launch/: .plantation_sim.launch.py.swp  plantation_sim.launch.py
models/low_fence/: model.config  model.sdf
models/oil_palm/: model.config  model.sdf
models/oil_palm_large/: model.config  model.sdf
models/oil_palm_small/: model.config  model.sdf
models/orchard_tree/: model.config  model.sdf
models/orchard_tree_large/: model.config  model.sdf
models/orchard_tree_small/: model.config  model.sdf
models/plantation_quadrotor/: model.config  model.sdf
models/plantation_quadrotor_ardupilot/: model.config  model.sdf
models/sack_stack/: model.config  model.sdf
models/wooden_crate/: model.config  model.sdf
quadcopter/: quadcopter_world.sdf
worlds/: plantation.sdf  plantation_ardupilot.sdf
