<?xml version="1.0"?>
<package format="3">
  <name>uav_plantation_sim</name>
  <version>0.2.0</version>
  <description>ROS 2 and Gazebo Harmonic plantation simulation for GPS-denied UAV VIO and SLAM testing.</description>

  <maintainer email="user@example.com">uav_plantation_sim maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
